# Scheduler_2

./: .cibuildwheel  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  build.sh  build_mac.sh  build_mac_2.sh  build_wheels.sh  main  main.cpp  requirements.txt  setup.py  test_1.py  test_2.py
my_module/: DataContainer.h  InputData.cpp  InputData.h  ParseSetup.cpp  interactive_gantt.html  module.cpp  operations_data.json  run_server.sh  serialize_operations  serialize_operations.cpp  utils.h
my_module.egg-info/: PKG-INFO  SOURCES.txt
test_folder/: Scheduling.py
wheelhouse/: my_module-1.0-cp310-cp310-manylinux_2_17_i686.manylinux2014_i686.whl  my_module-1.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  my_module-1.0-cp310-cp310-musllinux_1_2_i686.whl  my_module-1.0-cp310-cp310-musllinux_1_2_x86_64.whl  my_module-1.0-cp311-cp311-manylinux_2_17_i686.manylinux2014_i686.whl  my_module-1.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  my_module-1.0-cp311-cp311-musllinux_1_2_i686.whl  my_module-1.0-cp311-cp311-musllinux_1_2_x86_64.whl  my_module-1.0-cp312-cp312-manylinux_2_17_i686.manylinux2014_i686.whl  my_module-1.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  my_module-1.0-cp312-cp312-musllinux_1_2_i686.whl  my_module-1.0-cp312-cp312-musllinux_1_2_x86_64.whl  my_module-1.0-cp36-cp36m-manylinux_2_17_i686.manylinux2014_i686.whl  my_module-1.0-cp36-cp36m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  my_module-1.0-cp36-cp36m-musllinux_1_2_i686.whl  my_module-1.0-cp36-cp36m-musllinux_1_2_x86_64.whl  (+20 more)
(+1 files in other folders)
